changes in about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         {{>header}}
 
+        <p>This site created by Binjan. It uses data from mapbox.com and darksite.net!</p>
         <img class="portrait" src="/img/1.jpg" />
         
         {{>footer}}
